🛢[SQL] Add SQL read and write

--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,10 @@
-PORT=80
-API_KEY=
-AUTORIZE_UUID=
+PORT=8080
+API_KEY=dev
+
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=3306
+DATABASE_USER=root
+DATABASE_PASSWORD=
+DATABASE_NAME=bahpolo-server
+
+LOGS_TABLE=logs
